...
        child: SingleChildScrollView(
          child: Form(
            key: _fKey,
            child: Column(
              children: [
                const Text(
                  "Log into your account",
                  style: TextStyle(
                    fontFamily: "Mula",
                    fontSize: 25,
                  ),
                ),
                const SizedBox(
...
                  ],
                ),
                const SizedBox(
                  height: 60,
                ),
                ElevatedButton(
                  key: const Key("loginButton"),
                    style: ElevatedButton.styleFrom(
                      foregroundColor: Colors.white,
                      backgroundColor: const Color(0xFF820ce8),
                      shape: const RoundedRectangleBorder(
                          borderRadius: BorderRadius.all(
                        Radius.elliptical(10, 10),
...
