...
    super.key,
  });

  @override
  Widget build(BuildContext context) {
    return Drawer(
      key: const Key('drawer'),
      backgroundColor: Colors.white,
      child: SafeArea(
        child: Padding(
          padding: const EdgeInsets.all(15.0),
          child: SingleChildScrollView(
            child: Column(
...
                  padding: const EdgeInsets.all(8.0),
                  child: Row(
                    children: [
                      SizedBox(
                        width: 255,
                        child: ElevatedButton(
                          key: const Key('signOut'),
                            style: ElevatedButton.styleFrom(
                              backgroundColor: Colors.white,
                              foregroundColor: Colors.black,
                              elevation: 0.3,
                              padding: const EdgeInsets.all(20),
                            ),
...
